# found-footy

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE.md.3collections  ARCHITECTURE.md.6collections  CHANGES_TODAY.md  DAGSTER_ARCHITECTURE.md  DAGSTER_MIGRATION.md  DEBOUNCE_SIMPLIFICATION.md  DEDUP_UNIFICATION.md  Dockerfile  Dockerfile.dev  EVENT_MATCHING.md  GEO_RESTRICTION_BYPASS.md  LOGGING.md  ORCHESTRATION.md  PLAN_TOMORROW.md  RAG_IMPLEMENTATION.md  README.md  README.md.6collections  README.md.old  README_PREFECT.md  REFACTOR_PLAN.md  SETUP.md  TEMPORAL_SETUP.md  TEMPORAL_WORKFLOWS.md  TWITTER_AUTH.md  WORKFLOW_TRACKING_REFACTOR.md  architecture.md  dagster.yaml  debug_automation.py  debug_events.py  docker-compose.dagster.yml  docker-compose.dev.yml  docker-compose.prefect.yml.backup  docker-compose.yml  generate_twitter_cookies_windows.py  mongo-init-keyfile.sh  (+15 more)
.archive/: JOB_EXECUTION_GUIDE.md  SENSOR_ARCHITECTURE.md
.devcontainer/: devcontainer.json
.telemetry/: id.yaml
api/: app.py  deps.py  envelope.py  errors.py  settings.py  sse.py
deploy/: INFRA-NOTES.md
docs/: README.md  STAGING_INTERVAL_POLLING.md  api-contract.md  architecture.md  audit.md  decisions.md  design-audit.md  logging.md  operations.md  orchestration.md  rag.md  roadmap.md  sprints.md  temporal.md  todo.md  twitter-auth.md
found_footy/: __init__.py  main.py
scripts/: check_minio.py  check_stuck_events.sh  clean_db.py  cleanup_duplicate_videos.py  debug_twitter_worker.py  export_twitter_cookies.py  login_twitter.sh  migrate_perceptual_hashes.py  quick_debug.sh  rehash_and_dedupe.py  rehash_videos.py  reset_test.sh  run_monitor.py  run_monitor_manually.py  setup_test_fixture.py  setup_twitter_docker.sh  test_clock_extraction.py  test_integration_real.py  test_monitor_cycle.py  test_qwen_vl_embedding.py  test_real_goal.py  test_real_pipeline.py  test_structured_extraction.py  test_szoboszlai_real.py  test_twitter_content.py  twitter_login.sh  twitter_login_watcher.sh  twitter_worker_startup.py  validate_refactor.py
src/: README.md  __init__.py  worker.py
tests/: README.md  conftest.py  test_activity_registration.py  test_advance_flow.py  test_all_videos_validation.py  test_clock_parsing.py  test_database_cleanup.py  test_download_flow.py  test_errors.py  test_flows.py  test_goal_flow.py  test_ingest_flow.py  test_integration.py  test_mongo_api.py  test_monitor_flow.py  test_rag_pipeline.py  test_simple_wikidata.py  test_storage.py  test_twitter_api.py  test_twitter_flow.py  test_twitter_real_world.py  test_twitter_scrape.py  test_url_validation.py  test_vision_validation.py
twitter/: MIGRATION.md  QUICKSTART.md  README.md  SIMPLIFIED.md  VNC_LOGIN_GUIDE.md  __init__.py  app.py  (+10 more)
(+196 files in other folders)
