[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "found-footy"
version = "0.1.0"
description = "Football fixtures and goal automation using Prefect"
authors = [{name = "Vedanta Dhobley", email = "vedanta.dhobley@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["found_footy*"]