[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "found-footy"
version = "0.1.0"
description = "Football fixtures and goal automation using Prefect"
authors = [{name = "Vedanta Dhobley", email = "vedanta.dhobley@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["found_footy*"]

[tool.pytest.ini_options]
# ✅ ADD: Pytest configuration to suppress warnings
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore:Your Prefect server is running an older version:UserWarning"
]
log_cli = false
log_cli_level = "INFO"
addopts = "--strict-markers --strict-config"
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "slow: marks tests as slow running"
]